crates/dbdict/tests/snapshots/validate_spec__s10_duplicate_table_name.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 568
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
tables:
  - name: food
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
  - name: food
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
────────────────────────────────────────
error: [S10] Table names must be unique within the dictionary.
 --> dict.yaml:9:11
  |
4 |   - name: food
...
9 |   - name: food
  |           ^^^^ is duplicated
